--- a/templates/index.html
+++ b/templates/index.html
@@ -73,13 +73,13 @@
                 </div>
                 <div>
                     <span class="wind_speed"> SEA LEVEL: </span>
-                    <p>{{ weather['main']['sea_level'] | default('N/A', true) }} m/s</p>
+                    <p>{{ weather['main']['sea_level'] | default('N/A', true) }} m</p>
                     
 
                 </div>
                      <div>
                     <span class="wind_speed"> GROUND LEVEL: </span>
-                    <p>{{ weather['main']['grnd_level'] | default('N/A', true) }} m/s</p>
+                    <p>{{ weather['main']['grnd_level'] | default('N/A', true) }} m</p>
                     
 
                 </div>
